<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.br.atps.DetalhesDesejo">

    <TextView
        android:id="@+id/text_nome_produto"
        android:text="@string/nome_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_nome_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_nome_produto"
        android:enabled="false"
        />


    <TextView
        android:id="@+id/text_categoria"
        android:text="@string/categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_nome_produto"
        />

    <EditText
        android:id="@+id/edit_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_categoria"
        android:enabled="false"
        />


    <TextView
        android:id="@+id/text_preco_min"
        android:text="@string/preco_minimo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_categoria"
        />

    <EditText
        android:id="@+id/edit_preco_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_preco_min"
        android:enabled="false"
        />


    <TextView
        android:id="@+id/text_preco_max"
        android:text="@string/preco_maximo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_preco_min"
        />

    <EditText
        android:id="@+id/edit_preco_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_preco_max"
        android:enabled="false"
        />


    <TextView
        android:id="@+id/text_lojas"
        android:text="@string/lojas_achar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_preco_max"
        />

    <EditText
        android:id="@+id/edit_lojas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_lojas"
        android:enabled="false"
        />

    <ImageButton
        android:id="@+id/btnBuscape"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edit_lojas"
        android:background="@drawable/ic_buscape" />

</RelativeLayout>
